--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^3.2.0",
     "mongodb": "^2.2.26",
     "morgan": "^1.8.1",
-    "schema-inspector": "^1.6.8"
+    "schema-inspector": "^1.6.8",
+    "winston": "^2.3.1"
   }
 }
